# bothello

./: .clang-format  .gitignore  CMakeLists.txt  DOCS_BOT_UI.md  README.md  compile.sh  main.cpp  package-lock.json  package.json  profiling.sh  run_cpu_hpc.sh  server.js  versus.cpp
profiling/ncu/: bothello_block_ncu_report.ncu-rep  bothello_block_ncu_report.txt  bothello_block_ncu_report_converted.txt  bothello_leaf_ncu_report.txt  bothello_leaf_ncu_report_converted.txt  bothello_tree_cuda_ncu_report.ncu-rep  bothello_tree_cuda_ncu_report.txt  bothello_tree_cuda_ncu_report_converted.txt
profiling/nsys/: bothello_block_profile.nsys-rep  bothello_block_profile.sqlite  bothello_block_profile.txt  bothello_leaf_profile.nsys-rep  bothello_leaf_profile.txt  bothello_tree_cuda_profile.nsys-rep  bothello_tree_cuda_profile.sqlite  bothello_tree_cuda_profile.txt
src/: benchmark.cpp  board.cpp  board.h  bot_cli.cpp  gpu_config.h  mcts.cpp  mcts.h  mcts_block.cu  mcts_block.h  mcts_leaf_parallel.cu  mcts_leaf_parallel.h  mcts_tree_cuda.cu  mcts_tree_cuda.h  mcts_tree_openmp.cpp  mcts_tree_openmp.h
src_gpu/: gpu_board.cuh  gpu_config.h  parallel_mcts.cu  parallel_mcts.h
tests/: test_board.cpp
